--- a/CandyTeacher/MainWindow.xaml
+++ b/CandyTeacher/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:local="clr-namespace:CandyTeacher"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        Background="LightGray">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="150"/>
@@ -31,28 +32,28 @@
                 <RowDefinition Height="100" />
             </Grid.RowDefinitions>
 
-            <Label Content="Number of Professors:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <Label Content="Number of Professors:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" FontWeight="Bold"/>
             <xctk:IntegerUpDown Name="profCount" Minimum="1" Maximum="100" Value="2" Grid.Row="0" Grid.Column="1" Height="30" Width="50" HorizontalAlignment="Left" />
 
-            <Label Content="Number of Candy:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalContentAlignment="Left" />
+            <Label Content="Number of Candy:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalContentAlignment="Left" FontWeight="Bold" />
             <xctk:IntegerUpDown Name="candyCount" Minimum="1" Maximum="1000000" Value="20" Grid.Row="1" Grid.Column="1" Height="30" Width="50" HorizontalAlignment="Left" />
 
-            <Label Content="Time Thinking Multiplyer:" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" />
+            <Label Content="Time Thinking Multiplyer:" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" FontWeight="Bold" />
             <xctk:IntegerUpDown Name="multi" Minimum="1" Value="1" Grid.Row="2" Grid.Column="1" Height="30" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center" />
 
-            <Button Name="startButton" Content="Start" Width="70" Height="25" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" Click="startButton_Click" />
+            <Button Name="startButton" Background="LightGreen" Content="Start" Width="70" Height="25" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" Click="startButton_Click" />
 
             <Grid Grid.Row="3" Grid.Column="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Button Name="stopButton" Content="Stop" Width="70" Height="25" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" Click="stopButton_Click" />
+                <Button Name="stopButton" Background="PaleVioletRed" Content="Stop" Width="70" Height="25" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" Click="stopButton_Click" />
                 <Button Name="clearButton" Content="Clear" Width="70" Height="25" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Click="clearButton_Click" />
             </Grid>
             
             <ScrollViewer Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2">
-                <TextBlock Name="outText" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" />
+                <TextBlock Name="outText" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Background="WhiteSmoke"/>
             </ScrollViewer>
         </Grid>
 
